[CI] Implement selection rects for display compositor pixel dumps

This patch implements selection rects on the renderer side for display
compositor pixel dumps (when using OOPIF).

Bug: 875963, 876064
Change-Id: Ie1bc94d94dd290fce13198c63ce3ae8f3fd4b6bd
Reviewed-on: https://chromium-review.googlesource.com/1185915
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Mason Freed <masonfreed@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586291}
Former-commit-id: 75453eca5b9805945dde7a1e73d5f2c445027297